--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,15 @@ on:
   push
 
 jobs:
-  e2e-tests:
-    name: E2E Tests
-    runs-on: ubuntu-18.04
+  test:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-20.04
+          - ubuntu-18.04
+          - ubuntu-16.04
+    name: Test the Postgres Setup Action
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Set up postgres
         uses: ableco/action-postgres-setup@v1
