--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,5 @@ jobs:
         uses: ableco/action-postgres-setup@v1
         with:
           postgres-version: 11
+      - name: Initialize pgbench
+        run: pgbench -c 100 -T 300 -S -n
