--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,4 @@ jobs:
           postgres-version: 11
       - name: Initialize pgbench
         run: |
-          ls /usr/share/postgresql-common/pg_wrapper
-          sudo rm /usr/bin/pgbench
-          sudo ln -s /usr/share/postgresql-common/pg_wrapper /usr/bin/pgbench
-          pgbench -c 100 -T 300 -S -n
+          which pgbench
