--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Initialize pgbench
         run: |
           which pgbench
-          ls -l /usr/sbin/pgbench
+          ls -l /usr/bin/pgbench
