--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,5 @@ jobs:
         run: |
           sudo rm /usr/bin/pgbench
           sudo ln -s /usr/lib/postgresql/11/bin/pgbench /usr/bin/pgbench
-          pgbench -i -p 5432 -d postgres
-          pgbench -c 100 -T 300 -S -n
+          pgbench -U postgres -i -p 5432 -d postgres
+          pgbench -U postgres -c 100 -T 300 -S -n
