--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,8 @@ jobs:
             --health-cmd pg_isready
             --health-interval 10s
             --health-timeout 5s
+    runs-on: ubuntu-20.04
+    steps:
       - name: Initialize pgbench
         run: |
           pgbench -U postgres -i -p 5432 -d postgres
