--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,5 @@ jobs:
       - run:
           name: Database Setup
           command: |
-            pgbench -U postgres -i -h localhost -d postgres
-            pgbench -U postgres -h localhost -c 10 -T 30 -S -n
+            pgbench -U postgres -i -d postgres
+            pgbench -U postgres -c 10 -T 30 -S -n
