--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
           POSTGRES_DB: postgres
     steps:
       - run:
+          name: Wait for db
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run:
           name: Database Setup
           command: |
             pgbench -U postgres -i -d postgres
